# agenc-prover

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  export-production-prover-binary.yml  production-prover-verification.yml
admin-tools/: README.md  devnet-preflight.test.ts  devnet-preflight.ts  package-lock.json  package.json  protocol-program.test.ts  protocol-program.ts  tsconfig.json  zk-config-admin-cli.test.ts  zk-config-admin-cli.ts  zk-config-admin.command.test.ts  zk-config-admin.ts
docs/: ADMIN_TOOLS.md  CODEBASE_MAP.md  COMMANDS_AND_VALIDATION.md  DOCS_INDEX.md  PROVING_ARCHITECTURE.md
guest/: Cargo.toml
guest/src/: lib.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
scripts/: benchmark-prove.sh  check-admin-bootstrap-boundary.mjs  check-cuda-host.sh  install-production-toolchain.sh  production-toolchain.env  prove-benchmark-request.json  reproduce-production-build.sh  verify-production-image-id.sh  write-build-metadata.sh
server/: Cargo.toml
server/src/: main.rs  prover.rs
