[package]
name = "agenc-prover-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
production-prover = [
  "dep:risc0-zkvm",
  "risc0-zkvm/std",
  "risc0-zkvm/prove",
  "risc0-zkvm/disable-dev-mode",
  "dep:agenc-zkvm-methods",
]

[dependencies]
agenc-zkvm-guest = { path = "../guest" }
agenc-zkvm-methods = { path = "../methods", optional = true }
axum = "0.8"
risc0-zkvm = { version = "^3.0.5", optional = true, default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = "0.5"
